asgn3/src/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> program
Rule 2     program -> imports classes
Rule 3     program -> classes
Rule 4     imports -> imports IMPORT ID SEMICOLON
Rule 5     imports -> IMPORT ID SEMICOLON
Rule 6     classes -> classes class SEMICOLON
Rule 7     classes -> class SEMICOLON
Rule 8     class -> CLASS CLASS_TYPE INHERITS CLASS_TYPE LBRACE features_list RBRACE
Rule 9     class -> CLASS CLASS_TYPE LBRACE features_list RBRACE
Rule 10    class -> CLASS CLASS_TYPE INHERITS CLASS_TYPE LBRACE RBRACE
Rule 11    class -> CLASS CLASS_TYPE LBRACE RBRACE
Rule 12    features_list -> features_list feature SEMICOLON
Rule 13    features_list -> feature SEMICOLON
Rule 14    feature -> modifier ID LPAREN formal_parameter_list RPAREN COLON type LBRACE expression RBRACE
Rule 15    feature -> modifier ID LPAREN RPAREN COLON type LBRACE expression RBRACE
Rule 16    feature -> ID LPAREN formal_parameter_list RPAREN COLON type LBRACE expression RBRACE
Rule 17    feature -> ID LPAREN RPAREN COLON type LBRACE expression RBRACE
Rule 18    feature -> modifier formal
Rule 19    feature -> formal
Rule 20    modifier -> PUBLIC
Rule 21    modifier -> PRIVATE
Rule 22    type -> CLASS_TYPE
Rule 23    type -> INTEGER_TYPE
Rule 24    type -> BOOL_TYPE
Rule 25    type -> STRING_TYPE
Rule 26    type -> OBJECT
Rule 27    type -> SELF_TYPE
Rule 28    formal_parameter_list -> formal_parameter_list COMMA formal_parameter
Rule 29    formal_parameter_list -> formal_parameter
Rule 30    formal_parameter -> ID COLON type
Rule 31    formal_parameter -> ID LSQRBRACKET RSQRBRACKET COLON type
Rule 32    formal -> ID COLON type GETS expression
Rule 33    formal -> ID COLON type
Rule 34    formal -> ID COLON type LSQRBRACKET RSQRBRACKET
Rule 35    expression -> block_expression
Rule 36    block_expression -> LBRACE block_list RBRACE
Rule 37    block_list -> block_list expression SEMICOLON
Rule 38    block_list -> expression SEMICOLON
Rule 39    expression -> ID GETS expression
Rule 40    expression -> ID LSQRBRACKET expression RSQRBRACKET GETS expression
Rule 41    expression -> ID LPAREN argument_list RPAREN
Rule 42    expression -> ID LPAREN RPAREN
Rule 43    argument_list -> expression
Rule 44    argument_list -> argument_list COMMA expression
Rule 45    expression -> expression PLUS expression
Rule 46    expression -> expression MINUS expression
Rule 47    expression -> expression TIMES expression
Rule 48    expression -> expression DIVIDE expression
Rule 49    expression -> expression MOD expression
Rule 50    expression -> expression LT expression
Rule 51    expression -> expression GT expression
Rule 52    expression -> expression LTEQ expression
Rule 53    expression -> expression GTEQ expression
Rule 54    expression -> expression EQUAL expression
Rule 55    expression -> expression OR expression
Rule 56    expression -> expression AND expression
Rule 57    expression -> NOT expression
Rule 58    expression -> TILDA expression
Rule 59    expression -> LPAREN expression RPAREN
Rule 60    expression -> SELF
Rule 61    expression -> ID
Rule 62    expression -> ID LSQRBRACKET expression RSQRBRACKET
Rule 63    expression -> INTEGER
Rule 64    expression -> STRING
Rule 65    expression -> TRUE
Rule 66    expression -> FALSE
Rule 67    expression -> BREAK
Rule 68    expression -> CONTINUE
Rule 69    expression -> expression PERIOD ID LPAREN argument_list RPAREN
Rule 70    expression -> expression PERIOD ID LPAREN RPAREN
Rule 71    expression -> NEW type
Rule 72    expression -> ISVOID expression
Rule 73    expression -> let_expression
Rule 74    let_expression -> LET formal IN expression TEL
Rule 75    expression -> expression AT CLASS_TYPE PERIOD ID LPAREN argument_list RPAREN
Rule 76    expression -> expression AT CLASS_TYPE PERIOD ID LPAREN RPAREN
Rule 77    expression -> if_then_else
Rule 78    if_then_else -> IF expression THEN expression ELSE expression FI
Rule 79    expression -> while
Rule 80    while -> WHILE expression LOOP expression POOL
Rule 81    expression -> for
Rule 82    for -> FOR LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN LOOP expression POOL

Terminals, with rules where they appear

AND                  : 56
AT                   : 75 76
BOOL_TYPE            : 24
BREAK                : 67
CLASS                : 8 9 10 11
CLASS_TYPE           : 8 8 9 10 10 11 22 75 76
COLON                : 14 15 16 17 30 31 32 33 34
COMMA                : 28 44
CONTINUE             : 68
DIVIDE               : 48
ELSE                 : 78
EQUAL                : 54
FALSE                : 66
FI                   : 78
FOR                  : 82
GETS                 : 32 39 40
GT                   : 51
GTEQ                 : 53
ID                   : 4 5 14 15 16 17 30 31 32 33 34 39 40 41 42 61 62 69 70 75 76
IF                   : 78
IMPORT               : 4 5
IN                   : 74
INHERITS             : 8 10
INTEGER              : 63
INTEGER_TYPE         : 23
ISVOID               : 72
LBRACE               : 8 9 10 11 14 15 16 17 36
LET                  : 74
LOOP                 : 80 82
LPAREN               : 14 15 16 17 41 42 59 69 70 75 76 82
LSQRBRACKET          : 31 34 40 62
LT                   : 50
LTEQ                 : 52
MINUS                : 46
MOD                  : 49
NEW                  : 71
NOT                  : 57
OBJECT               : 26
OR                   : 55
PERIOD               : 69 70 75 76
PLUS                 : 45
POOL                 : 80 82
PRIVATE              : 21
PUBLIC               : 20
RBRACE               : 8 9 10 11 14 15 16 17 36
RPAREN               : 14 15 16 17 41 42 59 69 70 75 76 82
RSQRBRACKET          : 31 34 40 62
SELF                 : 60
SELF_TYPE            : 27
SEMICOLON            : 4 5 6 7 12 13 37 38 82 82
STRING               : 64
STRING_TYPE          : 25
TEL                  : 74
THEN                 : 78
TILDA                : 58
TIMES                : 47
TRUE                 : 65
WHILE                : 80
error                : 

Nonterminals, with rules where they appear

argument_list        : 41 44 69 75
block_expression     : 35
block_list           : 36 37
class                : 6 7
classes              : 2 3 6
expression           : 14 15 16 17 32 37 38 39 40 40 43 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 58 59 62 69 70 72 74 75 76 78 78 78 80 80 82 82 82 82
feature              : 12 13
features_list        : 8 9 12
for                  : 81
formal               : 18 19 74
formal_parameter     : 28 29
formal_parameter_list : 14 16 28
if_then_else         : 77
imports              : 2 4
let_expression       : 73
modifier             : 14 15 18
program              : 1
start                : 0
type                 : 14 15 16 17 30 31 32 33 34 71
while                : 79

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . program
    (2) program -> . imports classes
    (3) program -> . classes
    (4) imports -> . imports IMPORT ID SEMICOLON
    (5) imports -> . IMPORT ID SEMICOLON
    (6) classes -> . classes class SEMICOLON
    (7) classes -> . class SEMICOLON
    (8) class -> . CLASS CLASS_TYPE INHERITS CLASS_TYPE LBRACE features_list RBRACE
    (9) class -> . CLASS CLASS_TYPE LBRACE features_list RBRACE
    (10) class -> . CLASS CLASS_TYPE INHERITS CLASS_TYPE LBRACE RBRACE
    (11) class -> . CLASS CLASS_TYPE LBRACE RBRACE

    IMPORT          shift and go to state 7
    CLASS           shift and go to state 5

    program                        shift and go to state 1
    imports                        shift and go to state 2
    start                          shift and go to state 4
    classes                        shift and go to state 6
    class                          shift and go to state 3

state 1

    (1) start -> program .

    $end            reduce using rule 1 (start -> program .)


state 2

    (2) program -> imports . classes
    (4) imports -> imports . IMPORT ID SEMICOLON
    (6) classes -> . classes class SEMICOLON
    (7) classes -> . class SEMICOLON
    (8) class -> . CLASS CLASS_TYPE INHERITS CLASS_TYPE LBRACE features_list RBRACE
    (9) class -> . CLASS CLASS_TYPE LBRACE features_list RBRACE
    (10) class -> . CLASS CLASS_TYPE INHERITS CLASS_TYPE LBRACE RBRACE
    (11) class -> . CLASS CLASS_TYPE LBRACE RBRACE

    IMPORT          shift and go to state 9
    CLASS           shift and go to state 5

    classes                        shift and go to state 8
    class                          shift and go to state 3

state 3

    (7) classes -> class . SEMICOLON

    SEMICOLON       shift and go to state 10


state 4

    (0) S' -> start .



state 5

    (8) class -> CLASS . CLASS_TYPE INHERITS CLASS_TYPE LBRACE features_list RBRACE
    (9) class -> CLASS . CLASS_TYPE LBRACE features_list RBRACE
    (10) class -> CLASS . CLASS_TYPE INHERITS CLASS_TYPE LBRACE RBRACE
    (11) class -> CLASS . CLASS_TYPE LBRACE RBRACE

    CLASS_TYPE      shift and go to state 11


state 6

    (3) program -> classes .
    (6) classes -> classes . class SEMICOLON
    (8) class -> . CLASS CLASS_TYPE INHERITS CLASS_TYPE LBRACE features_list RBRACE
    (9) class -> . CLASS CLASS_TYPE LBRACE features_list RBRACE
    (10) class -> . CLASS CLASS_TYPE INHERITS CLASS_TYPE LBRACE RBRACE
    (11) class -> . CLASS CLASS_TYPE LBRACE RBRACE

    $end            reduce using rule 3 (program -> classes .)
    CLASS           shift and go to state 5

    class                          shift and go to state 12

state 7

    (5) imports -> IMPORT . ID SEMICOLON

    ID              shift and go to state 13


state 8

    (2) program -> imports classes .
    (6) classes -> classes . class SEMICOLON
    (8) class -> . CLASS CLASS_TYPE INHERITS CLASS_TYPE LBRACE features_list RBRACE
    (9) class -> . CLASS CLASS_TYPE LBRACE features_list RBRACE
    (10) class -> . CLASS CLASS_TYPE INHERITS CLASS_TYPE LBRACE RBRACE
    (11) class -> . CLASS CLASS_TYPE LBRACE RBRACE

    $end            reduce using rule 2 (program -> imports classes .)
    CLASS           shift and go to state 5

    class                          shift and go to state 12

state 9

    (4) imports -> imports IMPORT . ID SEMICOLON

    ID              shift and go to state 14


state 10

    (7) classes -> class SEMICOLON .

    CLASS           reduce using rule 7 (classes -> class SEMICOLON .)
    $end            reduce using rule 7 (classes -> class SEMICOLON .)


state 11

    (8) class -> CLASS CLASS_TYPE . INHERITS CLASS_TYPE LBRACE features_list RBRACE
    (9) class -> CLASS CLASS_TYPE . LBRACE features_list RBRACE
    (10) class -> CLASS CLASS_TYPE . INHERITS CLASS_TYPE LBRACE RBRACE
    (11) class -> CLASS CLASS_TYPE . LBRACE RBRACE

    INHERITS        shift and go to state 15
    LBRACE          shift and go to state 16


state 12

    (6) classes -> classes class . SEMICOLON

    SEMICOLON       shift and go to state 17


state 13

    (5) imports -> IMPORT ID . SEMICOLON

    SEMICOLON       shift and go to state 18


state 14

    (4) imports -> imports IMPORT ID . SEMICOLON

    SEMICOLON       shift and go to state 19


state 15

    (8) class -> CLASS CLASS_TYPE INHERITS . CLASS_TYPE LBRACE features_list RBRACE
    (10) class -> CLASS CLASS_TYPE INHERITS . CLASS_TYPE LBRACE RBRACE

    CLASS_TYPE      shift and go to state 20


state 16

    (9) class -> CLASS CLASS_TYPE LBRACE . features_list RBRACE
    (11) class -> CLASS CLASS_TYPE LBRACE . RBRACE
    (12) features_list -> . features_list feature SEMICOLON
    (13) features_list -> . feature SEMICOLON
    (14) feature -> . modifier ID LPAREN formal_parameter_list RPAREN COLON type LBRACE expression RBRACE
    (15) feature -> . modifier ID LPAREN RPAREN COLON type LBRACE expression RBRACE
    (16) feature -> . ID LPAREN formal_parameter_list RPAREN COLON type LBRACE expression RBRACE
    (17) feature -> . ID LPAREN RPAREN COLON type LBRACE expression RBRACE
    (18) feature -> . modifier formal
    (19) feature -> . formal
    (20) modifier -> . PUBLIC
    (21) modifier -> . PRIVATE
    (32) formal -> . ID COLON type GETS expression
    (33) formal -> . ID COLON type
    (34) formal -> . ID COLON type LSQRBRACKET RSQRBRACKET

    RBRACE          shift and go to state 21
    ID              shift and go to state 27
    PUBLIC          shift and go to state 26
    PRIVATE         shift and go to state 24

    features_list                  shift and go to state 25
    feature                        shift and go to state 23
    modifier                       shift and go to state 28
    formal                         shift and go to state 22

state 17

    (6) classes -> classes class SEMICOLON .

    CLASS           reduce using rule 6 (classes -> classes class SEMICOLON .)
    $end            reduce using rule 6 (classes -> classes class SEMICOLON .)


state 18

    (5) imports -> IMPORT ID SEMICOLON .

    IMPORT          reduce using rule 5 (imports -> IMPORT ID SEMICOLON .)
    CLASS           reduce using rule 5 (imports -> IMPORT ID SEMICOLON .)


state 19

    (4) imports -> imports IMPORT ID SEMICOLON .

    IMPORT          reduce using rule 4 (imports -> imports IMPORT ID SEMICOLON .)
    CLASS           reduce using rule 4 (imports -> imports IMPORT ID SEMICOLON .)


state 20

    (8) class -> CLASS CLASS_TYPE INHERITS CLASS_TYPE . LBRACE features_list RBRACE
    (10) class -> CLASS CLASS_TYPE INHERITS CLASS_TYPE . LBRACE RBRACE

    LBRACE          shift and go to state 29


state 21

    (11) class -> CLASS CLASS_TYPE LBRACE RBRACE .

    SEMICOLON       reduce using rule 11 (class -> CLASS CLASS_TYPE LBRACE RBRACE .)


state 22

    (19) feature -> formal .

    SEMICOLON       reduce using rule 19 (feature -> formal .)


state 23

    (13) features_list -> feature . SEMICOLON

    SEMICOLON       shift and go to state 30


state 24

    (21) modifier -> PRIVATE .

    ID              reduce using rule 21 (modifier -> PRIVATE .)


state 25

    (9) class -> CLASS CLASS_TYPE LBRACE features_list . RBRACE
    (12) features_list -> features_list . feature SEMICOLON
    (14) feature -> . modifier ID LPAREN formal_parameter_list RPAREN COLON type LBRACE expression RBRACE
    (15) feature -> . modifier ID LPAREN RPAREN COLON type LBRACE expression RBRACE
    (16) feature -> . ID LPAREN formal_parameter_list RPAREN COLON type LBRACE expression RBRACE
    (17) feature -> . ID LPAREN RPAREN COLON type LBRACE expression RBRACE
    (18) feature -> . modifier formal
    (19) feature -> . formal
    (20) modifier -> . PUBLIC
    (21) modifier -> . PRIVATE
    (32) formal -> . ID COLON type GETS expression
    (33) formal -> . ID COLON type
    (34) formal -> . ID COLON type LSQRBRACKET RSQRBRACKET

    RBRACE          shift and go to state 31
    ID              shift and go to state 27
    PUBLIC          shift and go to state 26
    PRIVATE         shift and go to state 24

    feature                        shift and go to state 32
    modifier                       shift and go to state 28
    formal                         shift and go to state 22

state 26

    (20) modifier -> PUBLIC .

    ID              reduce using rule 20 (modifier -> PUBLIC .)


state 27

    (16) feature -> ID . LPAREN formal_parameter_list RPAREN COLON type LBRACE expression RBRACE
    (17) feature -> ID . LPAREN RPAREN COLON type LBRACE expression RBRACE
    (32) formal -> ID . COLON type GETS expression
    (33) formal -> ID . COLON type
    (34) formal -> ID . COLON type LSQRBRACKET RSQRBRACKET

    LPAREN          shift and go to state 34
    COLON           shift and go to state 33


state 28

    (14) feature -> modifier . ID LPAREN formal_parameter_list RPAREN COLON type LBRACE expression RBRACE
    (15) feature -> modifier . ID LPAREN RPAREN COLON type LBRACE expression RBRACE
    (18) feature -> modifier . formal
    (32) formal -> . ID COLON type GETS expression
    (33) formal -> . ID COLON type
    (34) formal -> . ID COLON type LSQRBRACKET RSQRBRACKET

    ID              shift and go to state 35

    formal                         shift and go to state 36

state 29

    (8) class -> CLASS CLASS_TYPE INHERITS CLASS_TYPE LBRACE . features_list RBRACE
    (10) class -> CLASS CLASS_TYPE INHERITS CLASS_TYPE LBRACE . RBRACE
    (12) features_list -> . features_list feature SEMICOLON
    (13) features_list -> . feature SEMICOLON
    (14) feature -> . modifier ID LPAREN formal_parameter_list RPAREN COLON type LBRACE expression RBRACE
    (15) feature -> . modifier ID LPAREN RPAREN COLON type LBRACE expression RBRACE
    (16) feature -> . ID LPAREN formal_parameter_list RPAREN COLON type LBRACE expression RBRACE
    (17) feature -> . ID LPAREN RPAREN COLON type LBRACE expression RBRACE
    (18) feature -> . modifier formal
    (19) feature -> . formal
    (20) modifier -> . PUBLIC
    (21) modifier -> . PRIVATE
    (32) formal -> . ID COLON type GETS expression
    (33) formal -> . ID COLON type
    (34) formal -> . ID COLON type LSQRBRACKET RSQRBRACKET

    RBRACE          shift and go to state 37
    ID              shift and go to state 27
    PUBLIC          shift and go to state 26
    PRIVATE         shift and go to state 24

    features_list                  shift and go to state 38
    feature                        shift and go to state 23
    modifier                       shift and go to state 28
    formal                         shift and go to state 22

state 30

    (13) features_list -> feature SEMICOLON .

    RBRACE          reduce using rule 13 (features_list -> feature SEMICOLON .)
    ID              reduce using rule 13 (features_list -> feature SEMICOLON .)
    PUBLIC          reduce using rule 13 (features_list -> feature SEMICOLON .)
    PRIVATE         reduce using rule 13 (features_list -> feature SEMICOLON .)


state 31

    (9) class -> CLASS CLASS_TYPE LBRACE features_list RBRACE .

    SEMICOLON       reduce using rule 9 (class -> CLASS CLASS_TYPE LBRACE features_list RBRACE .)


state 32

    (12) features_list -> features_list feature . SEMICOLON

    SEMICOLON       shift and go to state 39


state 33

    (32) formal -> ID COLON . type GETS expression
    (33) formal -> ID COLON . type
    (34) formal -> ID COLON . type LSQRBRACKET RSQRBRACKET
    (22) type -> . CLASS_TYPE
    (23) type -> . INTEGER_TYPE
    (24) type -> . BOOL_TYPE
    (25) type -> . STRING_TYPE
    (26) type -> . OBJECT
    (27) type -> . SELF_TYPE

    CLASS_TYPE      shift and go to state 41
    INTEGER_TYPE    shift and go to state 44
    BOOL_TYPE       shift and go to state 46
    STRING_TYPE     shift and go to state 43
    OBJECT          shift and go to state 42
    SELF_TYPE       shift and go to state 40

    type                           shift and go to state 45

state 34

    (16) feature -> ID LPAREN . formal_parameter_list RPAREN COLON type LBRACE expression RBRACE
    (17) feature -> ID LPAREN . RPAREN COLON type LBRACE expression RBRACE
    (28) formal_parameter_list -> . formal_parameter_list COMMA formal_parameter
    (29) formal_parameter_list -> . formal_parameter
    (30) formal_parameter -> . ID COLON type
    (31) formal_parameter -> . ID LSQRBRACKET RSQRBRACKET COLON type

    RPAREN          shift and go to state 48
    ID              shift and go to state 50

    formal_parameter_list          shift and go to state 47
    formal_parameter               shift and go to state 49

state 35

    (14) feature -> modifier ID . LPAREN formal_parameter_list RPAREN COLON type LBRACE expression RBRACE
    (15) feature -> modifier ID . LPAREN RPAREN COLON type LBRACE expression RBRACE
    (32) formal -> ID . COLON type GETS expression
    (33) formal -> ID . COLON type
    (34) formal -> ID . COLON type LSQRBRACKET RSQRBRACKET

    LPAREN          shift and go to state 51
    COLON           shift and go to state 33


state 36

    (18) feature -> modifier formal .

    SEMICOLON       reduce using rule 18 (feature -> modifier formal .)


state 37

    (10) class -> CLASS CLASS_TYPE INHERITS CLASS_TYPE LBRACE RBRACE .

    SEMICOLON       reduce using rule 10 (class -> CLASS CLASS_TYPE INHERITS CLASS_TYPE LBRACE RBRACE .)


state 38

    (8) class -> CLASS CLASS_TYPE INHERITS CLASS_TYPE LBRACE features_list . RBRACE
    (12) features_list -> features_list . feature SEMICOLON
    (14) feature -> . modifier ID LPAREN formal_parameter_list RPAREN COLON type LBRACE expression RBRACE
    (15) feature -> . modifier ID LPAREN RPAREN COLON type LBRACE expression RBRACE
    (16) feature -> . ID LPAREN formal_parameter_list RPAREN COLON type LBRACE expression RBRACE
    (17) feature -> . ID LPAREN RPAREN COLON type LBRACE expression RBRACE
    (18) feature -> . modifier formal
    (19) feature -> . formal
    (20) modifier -> . PUBLIC
    (21) modifier -> . PRIVATE
    (32) formal -> . ID COLON type GETS expression
    (33) formal -> . ID COLON type
    (34) formal -> . ID COLON type LSQRBRACKET RSQRBRACKET

    RBRACE          shift and go to state 52
    ID              shift and go to state 27
    PUBLIC          shift and go to state 26
    PRIVATE         shift and go to state 24

    feature                        shift and go to state 32
    modifier                       shift and go to state 28
    formal                         shift and go to state 22

state 39

    (12) features_list -> features_list feature SEMICOLON .

    RBRACE          reduce using rule 12 (features_list -> features_list feature SEMICOLON .)
    ID              reduce using rule 12 (features_list -> features_list feature SEMICOLON .)
    PUBLIC          reduce using rule 12 (features_list -> features_list feature SEMICOLON .)
    PRIVATE         reduce using rule 12 (features_list -> features_list feature SEMICOLON .)


state 40

    (27) type -> SELF_TYPE .

    RPAREN          reduce using rule 27 (type -> SELF_TYPE .)
    COMMA           reduce using rule 27 (type -> SELF_TYPE .)
    GETS            reduce using rule 27 (type -> SELF_TYPE .)
    LSQRBRACKET     reduce using rule 27 (type -> SELF_TYPE .)
    SEMICOLON       reduce using rule 27 (type -> SELF_TYPE .)
    IN              reduce using rule 27 (type -> SELF_TYPE .)
    LBRACE          reduce using rule 27 (type -> SELF_TYPE .)
    PLUS            reduce using rule 27 (type -> SELF_TYPE .)
    MINUS           reduce using rule 27 (type -> SELF_TYPE .)
    TIMES           reduce using rule 27 (type -> SELF_TYPE .)
    DIVIDE          reduce using rule 27 (type -> SELF_TYPE .)
    MOD             reduce using rule 27 (type -> SELF_TYPE .)
    LT              reduce using rule 27 (type -> SELF_TYPE .)
    GT              reduce using rule 27 (type -> SELF_TYPE .)
    LTEQ            reduce using rule 27 (type -> SELF_TYPE .)
    GTEQ            reduce using rule 27 (type -> SELF_TYPE .)
    EQUAL           reduce using rule 27 (type -> SELF_TYPE .)
    OR              reduce using rule 27 (type -> SELF_TYPE .)
    AND             reduce using rule 27 (type -> SELF_TYPE .)
    PERIOD          reduce using rule 27 (type -> SELF_TYPE .)
    AT              reduce using rule 27 (type -> SELF_TYPE .)
    LOOP            reduce using rule 27 (type -> SELF_TYPE .)
    THEN            reduce using rule 27 (type -> SELF_TYPE .)
    RSQRBRACKET     reduce using rule 27 (type -> SELF_TYPE .)
    RBRACE          reduce using rule 27 (type -> SELF_TYPE .)
    POOL            reduce using rule 27 (type -> SELF_TYPE .)
    ELSE            reduce using rule 27 (type -> SELF_TYPE .)
    TEL             reduce using rule 27 (type -> SELF_TYPE .)
    FI              reduce using rule 27 (type -> SELF_TYPE .)


state 41

    (22) type -> CLASS_TYPE .

    RPAREN          reduce using rule 22 (type -> CLASS_TYPE .)
    COMMA           reduce using rule 22 (type -> CLASS_TYPE .)
    GETS            reduce using rule 22 (type -> CLASS_TYPE .)
    LSQRBRACKET     reduce using rule 22 (type -> CLASS_TYPE .)
    SEMICOLON       reduce using rule 22 (type -> CLASS_TYPE .)
    IN              reduce using rule 22 (type -> CLASS_TYPE .)
    LBRACE          reduce using rule 22 (type -> CLASS_TYPE .)
    PLUS            reduce using rule 22 (type -> CLASS_TYPE .)
    MINUS           reduce using rule 22 (type -> CLASS_TYPE .)
    TIMES           reduce using rule 22 (type -> CLASS_TYPE .)
    DIVIDE          reduce using rule 22 (type -> CLASS_TYPE .)
    MOD             reduce using rule 22 (type -> CLASS_TYPE .)
    LT              reduce using rule 22 (type -> CLASS_TYPE .)
    GT              reduce using rule 22 (type -> CLASS_TYPE .)
    LTEQ            reduce using rule 22 (type -> CLASS_TYPE .)
    GTEQ            reduce using rule 22 (type -> CLASS_TYPE .)
    EQUAL           reduce using rule 22 (type -> CLASS_TYPE .)
    OR              reduce using rule 22 (type -> CLASS_TYPE .)
    AND             reduce using rule 22 (type -> CLASS_TYPE .)
    PERIOD          reduce using rule 22 (type -> CLASS_TYPE .)
    AT              reduce using rule 22 (type -> CLASS_TYPE .)
    LOOP            reduce using rule 22 (type -> CLASS_TYPE .)
    THEN            reduce using rule 22 (type -> CLASS_TYPE .)
    RSQRBRACKET     reduce using rule 22 (type -> CLASS_TYPE .)
    RBRACE          reduce using rule 22 (type -> CLASS_TYPE .)
    POOL            reduce using rule 22 (type -> CLASS_TYPE .)
    ELSE            reduce using rule 22 (type -> CLASS_TYPE .)
    TEL             reduce using rule 22 (type -> CLASS_TYPE .)
    FI              reduce using rule 22 (type -> CLASS_TYPE .)


state 42

    (26) type -> OBJECT .

    RPAREN          reduce using rule 26 (type -> OBJECT .)
    COMMA           reduce using rule 26 (type -> OBJECT .)
    GETS            reduce using rule 26 (type -> OBJECT .)
    LSQRBRACKET     reduce using rule 26 (type -> OBJECT .)
    SEMICOLON       reduce using rule 26 (type -> OBJECT .)
    IN              reduce using rule 26 (type -> OBJECT .)
    LBRACE          reduce using rule 26 (type -> OBJECT .)
    PLUS            reduce using rule 26 (type -> OBJECT .)
    MINUS           reduce using rule 26 (type -> OBJECT .)
    TIMES           reduce using rule 26 (type -> OBJECT .)
    DIVIDE          reduce using rule 26 (type -> OBJECT .)
    MOD             reduce using rule 26 (type -> OBJECT .)
    LT              reduce using rule 26 (type -> OBJECT .)
    GT              reduce using rule 26 (type -> OBJECT .)
    LTEQ            reduce using rule 26 (type -> OBJECT .)
    GTEQ            reduce using rule 26 (type -> OBJECT .)
    EQUAL           reduce using rule 26 (type -> OBJECT .)
    OR              reduce using rule 26 (type -> OBJECT .)
    AND             reduce using rule 26 (type -> OBJECT .)
    PERIOD          reduce using rule 26 (type -> OBJECT .)
    AT              reduce using rule 26 (type -> OBJECT .)
    LOOP            reduce using rule 26 (type -> OBJECT .)
    THEN            reduce using rule 26 (type -> OBJECT .)
    RSQRBRACKET     reduce using rule 26 (type -> OBJECT .)
    RBRACE          reduce using rule 26 (type -> OBJECT .)
    POOL            reduce using rule 26 (type -> OBJECT .)
    ELSE            reduce using rule 26 (type -> OBJECT .)
    TEL             reduce using rule 26 (type -> OBJECT .)
    FI              reduce using rule 26 (type -> OBJECT .)


state 43

    (25) type -> STRING_TYPE .

    RPAREN          reduce using rule 25 (type -> STRING_TYPE .)
    COMMA           reduce using rule 25 (type -> STRING_TYPE .)
    GETS            reduce using rule 25 (type -> STRING_TYPE .)
    LSQRBRACKET     reduce using rule 25 (type -> STRING_TYPE .)
    SEMICOLON       reduce using rule 25 (type -> STRING_TYPE .)
    IN              reduce using rule 25 (type -> STRING_TYPE .)
    LBRACE          reduce using rule 25 (type -> STRING_TYPE .)
    PLUS            reduce using rule 25 (type -> STRING_TYPE .)
    MINUS           reduce using rule 25 (type -> STRING_TYPE .)
    TIMES           reduce using rule 25 (type -> STRING_TYPE .)
    DIVIDE          reduce using rule 25 (type -> STRING_TYPE .)
    MOD             reduce using rule 25 (type -> STRING_TYPE .)
    LT              reduce using rule 25 (type -> STRING_TYPE .)
    GT              reduce using rule 25 (type -> STRING_TYPE .)
    LTEQ            reduce using rule 25 (type -> STRING_TYPE .)
    GTEQ            reduce using rule 25 (type -> STRING_TYPE .)
    EQUAL           reduce using rule 25 (type -> STRING_TYPE .)
    OR              reduce using rule 25 (type -> STRING_TYPE .)
    AND             reduce using rule 25 (type -> STRING_TYPE .)
    PERIOD          reduce using rule 25 (type -> STRING_TYPE .)
    AT              reduce using rule 25 (type -> STRING_TYPE .)
    LOOP            reduce using rule 25 (type -> STRING_TYPE .)
    THEN            reduce using rule 25 (type -> STRING_TYPE .)
    RSQRBRACKET     reduce using rule 25 (type -> STRING_TYPE .)
    RBRACE          reduce using rule 25 (type -> STRING_TYPE .)
    POOL            reduce using rule 25 (type -> STRING_TYPE .)
    ELSE            reduce using rule 25 (type -> STRING_TYPE .)
    TEL             reduce using rule 25 (type -> STRING_TYPE .)
    FI              reduce using rule 25 (type -> STRING_TYPE .)


state 44

    (23) type -> INTEGER_TYPE .

    RPAREN          reduce using rule 23 (type -> INTEGER_TYPE .)
    COMMA           reduce using rule 23 (type -> INTEGER_TYPE .)
    GETS            reduce using rule 23 (type -> INTEGER_TYPE .)
    LSQRBRACKET     reduce using rule 23 (type -> INTEGER_TYPE .)
    SEMICOLON       reduce using rule 23 (type -> INTEGER_TYPE .)
    IN              reduce using rule 23 (type -> INTEGER_TYPE .)
    LBRACE          reduce using rule 23 (type -> INTEGER_TYPE .)
    PLUS            reduce using rule 23 (type -> INTEGER_TYPE .)
    MINUS           reduce using rule 23 (type -> INTEGER_TYPE .)
    TIMES           reduce using rule 23 (type -> INTEGER_TYPE .)
    DIVIDE          reduce using rule 23 (type -> INTEGER_TYPE .)
    MOD             reduce using rule 23 (type -> INTEGER_TYPE .)
    LT              reduce using rule 23 (type -> INTEGER_TYPE .)
    GT              reduce using rule 23 (type -> INTEGER_TYPE .)
    LTEQ            reduce using rule 23 (type -> INTEGER_TYPE .)
    GTEQ            reduce using rule 23 (type -> INTEGER_TYPE .)
    EQUAL           reduce using rule 23 (type -> INTEGER_TYPE .)
    OR              reduce using rule 23 (type -> INTEGER_TYPE .)
    AND             reduce using rule 23 (type -> INTEGER_TYPE .)
    PERIOD          reduce using rule 23 (type -> INTEGER_TYPE .)
    AT              reduce using rule 23 (type -> INTEGER_TYPE .)
    LOOP            reduce using rule 23 (type -> INTEGER_TYPE .)
    THEN            reduce using rule 23 (type -> INTEGER_TYPE .)
    RSQRBRACKET     reduce using rule 23 (type -> INTEGER_TYPE .)
    RBRACE          reduce using rule 23 (type -> INTEGER_TYPE .)
    POOL            reduce using rule 23 (type -> INTEGER_TYPE .)
    ELSE            reduce using rule 23 (type -> INTEGER_TYPE .)
    TEL             reduce using rule 23 (type -> INTEGER_TYPE .)
    FI              reduce using rule 23 (type -> INTEGER_TYPE .)


state 45

    (32) formal -> ID COLON type . GETS expression
    (33) formal -> ID COLON type .
    (34) formal -> ID COLON type . LSQRBRACKET RSQRBRACKET

    GETS            shift and go to state 53
    IN              reduce using rule 33 (formal -> ID COLON type .)
    SEMICOLON       reduce using rule 33 (formal -> ID COLON type .)
    LSQRBRACKET     shift and go to state 54


state 46

    (24) type -> BOOL_TYPE .
